--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,8 +3,11 @@ services:
   nmap:
     build: .
     image: sammascanner/nmap:v0.2
+    networks:
+      - samma
     volumes:
       - ./:/scanner
+      - ./out:/out
     environment:
       - TARGET=195.178.178.114
       - SAMMA_IO_SCANNER=domain
@@ -14,3 +17,13 @@ services:
       - WRITE_TO_FILE="true"
     #command: python3 /code/nmap_httprecon.py
     command: python3 /code/nmap_tlscipher.py
+  filebeat:
+    image: docker.elastic.co/beats/filebeat:7.15.0
+    networks:
+      - samma
+    volumes:
+      - ./filebeat/filebeat.yml:/usr/share/filebeat/filebeat.yml
+      - ./out:/out
+networks:
+  samma:
+    external: true
